--- a/slam/.vscode/tasks.json
+++ b/slam/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-O2",
-                //"-fPIC",
+                "-fPIC",
                 "-std=c++14",
                 "-Wno-deprecated-declarations",
                 "${file}",
