removed +/mono_imu foder, Makefile

--- a/raspberrypi/mono/send/Makefile
+++ b/raspberrypi/mono/send/Makefile
@@ -4,14 +4,11 @@ COPENCV=-L/usr/local/include/opencv2/ -lopencv_videoio -lopencv_core -lopencv_im
 CMQTT=-lpaho-mqttpp3 -lpaho-mqtt3as
 .PHONY: all
 
-all : send send_vi
+all : send
 
 send : ./send.cpp
 	$(CC) $(COPTION) $^ -o $@ $(COPENCV) $(CMQTT)
 
-send_vi : ./send_vi.cpp
-	$(CC) $(COPTION) $^ -o $@ $(COPENCV)
-
 .PHONY: clean
 clean :
-	rm send send_vi
+	rm send
