--- a/slam/mono/Makefile
+++ b/slam/mono/Makefile
@@ -4,13 +4,10 @@ COPENCV=-L/usr/local/include/opencv2 -lopencv_videoio -lopencv_core -lopencv_img
 
 .PHONY: all
 
-all: main slam vi_slam
+all: main slam
 
 main: main.cpp
 	$(CC) $(COPTION) $^ -o $@ $(COPENCV)
 
 slam: slam.cc
-	$(CC) $(COPTION) $^ -o $@ $(COPENCV)
-
-vi_slam: vi_slam.cc
 	$(CC) $(COPTION) $^ -o $@ $(COPENCV)
