--- a/slam/mono/.vscode/tasks.json
+++ b/slam/mono/.vscode/tasks.json
@@ -7,7 +7,8 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-O2",
-                "-fPIC",
+                //"-g",
+                //"-fPIC",
                 "-std=c++14",
                 "-Wno-deprecated-declarations",
                 "${file}",
