--- a/slam/mono/.vscode/launch.json
+++ b/slam/mono/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/slam_old2",
+            "program": "${workspaceFolder}/slam",
             "args": [
                // "/home/kmg/ORB_SLAM3/Vocabulary/ORBvoc.txt",
                // "./cam_intrinsic.yaml",
